# cs350-roadmap-planner

./: GUIDE.md  README.md
backend/: .dockerignore  .env.example  .gitignore  BACKEND.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/data/: course_categories.json  course_sectors.json  courses.json
backend/db-backup/: download.sh  upload.sh
backend/docs/: API.md
backend/scripts/: seed_courses.py  test_gmail_smtp.py
backend/src/db/: __init__.py  client.py
backend/src/db/models/: __init__.py  auth_session.py  course.py  course_category.py  course_sector.py  email_verification.py  example.py  roadmap.py  user.py  user_settings.py
backend/src/fastapi_app/: __init__.py  dependencies.py  main.py  security.py
backend/src/fastapi_app/routers/: auth.py  courses.py  credit_gpa.py  examples.py  roadmaps.py  users.py
backend/src/fastapi_app/schemas/: __init__.py  auth.py  courses.py  credit_gpa.py  examples.py  roadmaps.py  users.py
backend/src/fastapi_app/services/: auth.py  auth_sessions.py  courses.py  credit_gpa.py  examples.py  roadmaps.py  settings.py  users.py
backend/src/fastapi_app/services/auth/: README.md  __init__.py  email_verification.py  security.py  service.py  sessions.py
backend/src/tests/: README.md  test_auth_api.py  test_auth_security.py  test_course_service.py  test_creditgpa_service.py  test_email_verification_smtp.py  test_roadmap_service.py
docs/: API.md  gitcommit.md  roadmap-credit-gpa-decisions.md  tech-stack.md  workplan.md
frontend/: .gitignore  FRONTEND.md  app.json  package-lock.json  package.json
(+84 files in other folders)
