[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie>=2.1.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pymongo>=4.17.0",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_app", "src/db"]
